fixed fa icons not showing up

--- a/main.css
+++ b/main.css
@@ -130,6 +130,6 @@ h3 {
 .selfie-and-text p {
   align-self: center;
 }
-.fa{
+.fab, .fas{
     color: #000;
 }
